--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,7 +1,7 @@
 Name: vertx
 Cartridge-Short-Name: VERTX
 Display-Name: Vert.x 3.0.0-milestone4
-Description: "Vert.x is a lightweight, high performance application platform for the JVM that's designed for modern mobile, web, and enterprise applications."
+Description: ""
 Version: '3.0.0-milestone4'
 License: EPL 1.0
 License-Url: http://www.eclipse.org/legal/epl-v10.html
